<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LL_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/heliotrope"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/purpose1"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="25sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="@android:color/transparent"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeColor="@color/cornflowerblue"
            android:text="@string/stt_srvc"
            android:textColor="@color/cornflowerblue"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/stop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="@android:color/transparent"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeColor="@color/cornflowerblue"
            android:text="@string/stp_srvc"
            android:textColor="@color/cornflowerblue"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/blueribbon"
            android:text="@string/next_act"
            android:textColor="@android:color/white"/>

    </RelativeLayout>

</LinearLayout>