<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LL_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/aquamarine"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/purpose2"
        android:textAlignment="center"
        android:textColor="@color/martinique"
        android:textSize="25sp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@android:color/transparent"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeColor="@color/martinique"
        app:cornerRadius="20dp"
        android:text="@string/stt_job"
        android:textColor="@color/martinique"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@android:color/transparent"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeColor="@color/martinique"
        app:cornerRadius="20dp"
        android:text="@string/stp_job"
        android:textColor="@color/martinique"/>

</LinearLayout>